<resources>
    <string name="app_name">Just Java</string>

    <string name="hint_name">Name</string>

    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>

    <string name="quantity">Quantity</string>
    <string name="remove">-</string>
    <string name="zero">0</string>
    <string name="add">+</string>

    <string name="order_summary">Order Summary</string>

    <string name="order">Order</string>
</resources>